2000-06-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-add.c: make this window modeless.
	(gnc_ui_accWindow_ok_cb): don't let the user add an account with
	the same fully-qualified name as another account.

	* src/gnome/top-level.c (gnc_ui_destroy_all_subwindows): destroy
	all the account add windows, too.

	* src/gnome/window-main.c (gnc_refresh_main_window_title): new
	function to put the current filename in the main window title.
	(gnc_refresh_main_window): use the above when refreshing.

	* src/FileDialog.c (gncFileSaveAs): refresh the main window after
	'saving as' to update the filename in the main window.

2000-06-19  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc.gwp: take out GUIDs for Groups.

	* src/engine/Group.c: take out GUIDs for Groups. Groups are really
	just lists with no additional structure, and giving them GUIDs
	complicates matters without adding any utility. You can always use
	the parent account GUID instead.

	* src/gnome/top-level.c: configure list auto-popping from here.

	* src/register/gnome/combocell-gnome.c: determine whether or not
	to auto-pop lists based on a class variable, and not by looking
	up the guile function. This removes a src/guile dependency from
	src/register/gnome.

2000-06-14  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-item-edit.c (item_edit_show_list):
	make sure the current selected item is visible and, before doing
	so, process all pending events to make sure the list is shown and
	sized first.

2000-06-13  Dave Peticolas  <dave@krondo.com>

	* src/SplitLedger.c: refresh the main window before refreshing the
	register. This makes sure balances are recomputed first.

	* src/engine/Transaction.c (xaccSplitSetBaseValue): mark the split
	as having changed.

	* src/gnome/gnc-currency-edit.c: loosen the restrictions on what
	can be typed in. The 'currency' could potentially be a stock
	symbol.

2000-06-12  Dave Peticolas  <dave@krondo.com>
